antlrparser/duan_parser2/DuanLangParser.py
# Generated from DuanLangParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


from typing import List, Optional, Tuple, Any, Union


class DuanLangParser ( Parser ):

    grammarFileName = "DuanLangParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'```'", "<INVALID>", 
                     "'\\u5426\\u5219\\u82E5'", "'\\u5982\\u679C'", "'\\u90A3\\u4E48'", 
                     "'\\u5426\\u5219'", "'\\u7ED3\\u675F'", "'\\u5927\\u4E8E\\u7B49\\u4E8E'", 
                     "'\\u5C0F\\u4E8E\\u7B49\\u4E8E'", "'\\u4E0D\\u7B49\\u4E8E'", 
                     "'\\u5927\\u4E8E'", "'\\u5C0F\\u4E8E'", "'\\u5B9A\\u4E49'", 
                     "'\\u7B49\\u4E8E'", "'\\u6BB5'", "'\\u6570\\u636E\\u7C7B\\u578B'", 
                     "'\\u9519\\u8BEF'", "'\\u5E38\\u91CF'", "'\\u7C7B\\u578B'", 
                     "'\\u5BFC\\u51FA'", "'\\u5BFC\\u5165'", "'\\u4ECE'", 
                     "'\\u904D\\u5386'", "'\\u5F53'", "'\\u8DF3\\u51FA'", 
                     "'\\u8DF3\\u8FC7'", "'\\u5C1D\\u8BD5'", "'\\u6355\\u83B7'", 
                     "'\\u629B\\u51FA'", "'\\u8FD4\\u56DE'", "'\\u6253\\u5370'", 
                     "'\\u8F93\\u51FA'", "'\\u8F93\\u5165'", "'\\u7EE7\\u627F'", 
                     "'\\u4F7F\\u7528'", "'\\u7236'", "'\\u81EA\\u6211'", 
                     "'\\u65B9\\u6CD5'", "'\\u4E14'", "'\\u6216'", "'\\u975E'", 
                     "'\\u52A0'", "'\\u51CF'", "'\\u4E58'", "'\\u9664'", 
                     "'\\u6A21'", "'\\u5E42'", "'\\u5E76'", "'\\u4E4B'", 
                     "'\\u7684'", "'\\u771F'", "'\\u5047'", "'\\u7A7A'", 
                     "'\\u6570'", "'\\u6574\\u6570'", "'\\u6D6E\\u6570'", 
                     "'\\u4E32'", "'\\u5217'", "'\\u5178'", "'\\u96C6'", 
                     "'\\u5E03\\u5C14'", "'\\u4EFB\\u610F'", "'^'", "'%'", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'=='", "'!='", 
                     "'>='", "'<='", "'>'", "'<'", "'!'", "'&&'", "'||'", 
                     "'->'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\\u3001'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'{'", "'}'", "'\\u300A'", 
                     "'\\u300B'" ]

    symbolicNames = [ "<INVALID>", "LINE_COMMENT", "COMMENT_START", "COMMENT_CLOSE", 
                      "COMMENT_CONTENT", "K_ELSE_IF", "K_IF", "K_THEN", 
                      "K_ELSE", "K_END", "K_GE", "K_LE", "K_NE", "K_GT", 
                      "K_LT", "K_DEFINE", "K_EQUAL", "K_SEGMENT", "K_DATA_TYPE", 
                      "K_ERROR_TYPE", "K_CONST", "K_TYPE", "K_EXPORT", "K_IMPORT", 
                      "K_FROM", "K_FOREACH", "K_WHILE", "K_BREAK", "K_CONTINUE", 
                      "K_TRY", "K_CATCH", "K_THROW", "K_RETURN", "K_PRINT", 
                      "K_OUTPUT", "K_INPUT", "K_INHERIT", "K_USE", "K_PARENT", 
                      "K_SELF", "K_METHOD", "K_AND", "K_OR", "K_NOT", "K_PLUS", 
                      "K_MINUS", "K_MULTIPLY", "K_DIVIDE", "K_MOD", "K_POW", 
                      "K_AND_WORD", "K_OF", "K_DE", "K_TRUE", "K_FALSE", 
                      "K_NULL", "T_NUMBER", "T_INT", "T_FLOAT", "T_STRING", 
                      "T_LIST", "T_DICT", "T_SET", "T_BOOL", "T_ANY", "POW", 
                      "MODULO", "MULTIPLY", "DIVIDE", "PLUS", "MINUS", "EQ", 
                      "NE", "GE", "LE", "GT", "LT", "NOT", "AND", "OR", 
                      "PIPE", "PATH_SEP", "DOT", "COMMA", "COLON", "SEMICOLON", 
                      "PAUSE", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
                      "LBRACE", "RBRACE", "BOOK_L", "BOOK_R", "NUMBER", 
                      "STRING", "ID", "NEWLINE", "WS", "UNKNOWN" ]

    RULE_program = 0
    RULE_moduleDecl = 1
    RULE_definition = 2
    RULE_paragraphDef = 3
    RULE_paramList = 4
    RULE_param = 5
    RULE_block = 6
    RULE_dataTypeDef = 7
    RULE_dataTypeField = 8
    RULE_errorTypeDef = 9
    RULE_importStmt = 10
    RULE_exportStmt = 11
    RULE_path = 12
    RULE_importList = 13
    RULE_importItem = 14
    RULE_stmt = 15
    RULE_varDecl = 16
    RULE_assignStmt = 17
    RULE_target = 18
    RULE_ifStmt = 19
    RULE_foreachStmt = 20
    RULE_foreachVar = 21
    RULE_whileStmt = 22
    RULE_returnStmt = 23
    RULE_breakStmt = 24
    RULE_continueStmt = 25
    RULE_tryStmt = 26
    RULE_throwStmt = 27
    RULE_printStmt = 28
    RULE_exprStmt = 29
    RULE_expr = 30
    RULE_pipelineExpr = 31
    RULE_andExpr = 32
    RULE_orExpr = 33
    RULE_comparisonExpr = 34
    RULE_compOp = 35
    RULE_additiveExpr = 36
    RULE_addOp = 37
    RULE_multiplicativeExpr = 38
    RULE_multOp = 39
    RULE_unaryExpr = 40
    RULE_postfixExpr = 41
    RULE_primary = 42
    RULE_typeAnnotation = 43
    RULE_builtinType = 44
    RULE_exprList = 45

    ruleNames =  [ "program", "moduleDecl", "definition", "paragraphDef", 
                   "paramList", "param", "block", "dataTypeDef", "dataTypeField", 
                   "errorTypeDef", "importStmt", "exportStmt", "path", "importList", 
                   "importItem", "stmt", "varDecl", "assignStmt", "target", 
                   "ifStmt", "foreachStmt", "foreachVar", "whileStmt", "returnStmt", 
                   "breakStmt", "continueStmt", "tryStmt", "throwStmt", 
                   "printStmt", "exprStmt", "expr", "pipelineExpr", "andExpr", 
                   "orExpr", "comparisonExpr", "compOp", "additiveExpr", 
                   "addOp", "multiplicativeExpr", "multOp", "unaryExpr", 
                   "postfixExpr", "primary", "typeAnnotation", "builtinType", 
                   "exprList" ]

    EOF = Token.EOF
    LINE_COMMENT=1
    COMMENT_START=2
    COMMENT_CLOSE=3
    COMMENT_CONTENT=4
    K_ELSE_IF=5
    K_IF=6
    K_THEN=7
    K_ELSE=8
    K_END=9
    K_GE=10
    K_LE=11
    K_NE=12
    K_GT=13
    K_LT=14
    K_DEFINE=15
    K_EQUAL=16
    K_SEGMENT=17
    K_DATA_TYPE=18
    K_ERROR_TYPE=19
    K_CONST=20
    K_TYPE=21
    K_EXPORT=22
    K_IMPORT=23
    K_FROM=24
    K_FOREACH=25
    K_WHILE=26
    K_BREAK=27
    K_CONTINUE=28
    K_TRY=29
    K_CATCH=30
    K_THROW=31
    K_RETURN=32
    K_PRINT=33
    K_OUTPUT=34
    K_INPUT=35
    K_INHERIT=36
    K_USE=37
    K_PARENT=38
    K_SELF=39
    K_METHOD=40
    K_AND=41
    K_OR=42
    K_NOT=43
    K_PLUS=44
    K_MINUS=45
    K_MULTIPLY=46
    K_DIVIDE=47
    K_MOD=48
    K_POW=49
    K_AND_WORD=50
    K_OF=51
    K_DE=52
    K_TRUE=53
    K_FALSE=54
    K_NULL=55
    T_NUMBER=56
    T_INT=57
    T_FLOAT=58
    T_STRING=59
    T_LIST=60
    T_DICT=61
    T_SET=62
    T_BOOL=63
    T_ANY=64
    POW=65
    MODULO=66
    MULTIPLY=67
    DIVIDE=68
    PLUS=69
    MINUS=70
    EQ=71
    NE=72
    GE=73
    LE=74
    GT=75
    LT=76
    NOT=77
    AND=78
    OR=79
    PIPE=80
    PATH_SEP=81
    DOT=82
    COMMA=83
    COLON=84
    SEMICOLON=85
    PAUSE=86
    LPAREN=87
    RPAREN=88
    LBRACKET=89
    RBRACKET=90
    LBRACE=91
    RBRACE=92
    BOOK_L=93
    BOOK_R=94
    NUMBER=95
    STRING=96
    ID=97
    NEWLINE=98
    WS=99
    UNKNOWN=100

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DuanLangParser.EOF, 0)

        def moduleDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DuanLangParser.ModuleDeclContext)
            else:
                return self.getTypedRuleContext(DuanLangParser.ModuleDeclContext,i)


        def importStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DuanLangParser.ImportStmtContext)
            else:
                return self.getTypedRuleContext(DuanLangParser.ImportStmtContext,i)


        def exportStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DuanLangParser.ExportStmtContext)
            else:
                return self.getTypedRuleContext(DuanLangParser.ExportStmtContext,i)


        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DuanLangParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(DuanLangParser.DefinitionContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DuanLangParser.StmtContext)
            else:
                return self.getTypedRuleContext(DuanLangParser.StmtContext,i)


        def getRuleIndex(self):
            return DuanLangParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DuanLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 63094408530133056) != 0) or ((((_la - 70)) & ~0x3f) == 0 and ((1 << (_la - 70)) & 243925121) != 0):
                self.state = 97
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 92
                    self.moduleDecl()
                    pass

                elif la_ == 2:
                    self.state = 93
                    self.importStmt()
                    pass

                elif la_ == 3:
                    self.state = 94
                    self.exportStmt()
                    pass

                elif la_ == 4:
                    self.state = 95
                    self.definition()
                    pass

                elif la_ == 5:
                    self.state = 96
                    self.stmt()
                    pass


                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self.match(DuanLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACKET(self):
            return self.getToken(DuanLangParser.LBRACKET, 0)

        def ID(self):
            return self.getToken(DuanLangParser.ID, 0)

        def RBRACKET(self):
            return self.getToken(DuanLangParser.RBRACKET, 0)

        def getRuleIndex(self):
            return DuanLangParser.RULE_moduleDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModuleDecl" ):
                return visitor.visitModuleDecl(self)
            else:
                return visitor.visitChildren(self)




    def moduleDecl(self):

        localctx = DuanLangParser.ModuleDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_moduleDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(DuanLangParser.LBRACKET)
            self.state = 105
            self.match(DuanLangParser.ID)
            self.state = 106
            self.match(DuanLangParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paragraphDef(self):
            return self.getTypedRuleContext(DuanLangParser.ParagraphDefContext,0)


        def dataTypeDef(self):
            return self.getTypedRuleContext(DuanLangParser.DataTypeDefContext,0)


        def errorTypeDef(self):
            return self.getTypedRuleContext(DuanLangParser.ErrorTypeDefContext,0)


        def getRuleIndex(self):
            return DuanLangParser.RULE_definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = DuanLangParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_definition)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.paragraphDef()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.dataTypeDef()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.errorTypeDef()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParagraphDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOK_L(self):
            return self.getToken(DuanLangParser.BOOK_L, 0)

        def ID(self):
            return self.getToken(DuanLangParser.ID, 0)

        def BOOK_R(self):
            return self.getToken(DuanLangParser.BOOK_R, 0)

        def K_SEGMENT(self):
            return self.getToken(DuanLangParser.K_SEGMENT, 0)

        def LPAREN(self):
            return self.getToken(DuanLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(DuanLangParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(DuanLangParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(DuanLangParser.BlockContext,0)


        def K_END(self):
            return self.getToken(DuanLangParser.K_END, 0)

        def paramList(self):
            return self.getTypedRuleContext(DuanLangParser.ParamListContext,0)


        def PIPE(self):
            return self.getToken(DuanLangParser.PIPE, 0)

        def typeAnnotation(self):
            return self.getTypedRuleContext(DuanLangParser.TypeAnnotationContext,0)


        def DOT(self):
            return self.getToken(DuanLangParser.DOT, 0)

        def getRuleIndex(self):
            return DuanLangParser.RULE_paragraphDef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParagraphDef" ):
                return visitor.visitParagraphDef(self)
            else:
                return visitor.visitChildren(self)




    def paragraphDef(self):

        localctx = DuanLangParser.ParagraphDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_paragraphDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(DuanLangParser.BOOK_L)
            self.state = 114
            self.match(DuanLangParser.ID)
            self.state = 115
            self.match(DuanLangParser.BOOK_R)
            self.state = 116
            self.match(DuanLangParser.K_SEGMENT)
            self.state = 117
            self.match(DuanLangParser.LPAREN)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==97:
                self.state = 118
                self.paramList()


            self.state = 121
            self.match(DuanLangParser.RPAREN)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==80:
                self.state = 122
                self.match(DuanLangParser.PIPE)
                self.state = 123
                self.typeAnnotation()


            self.state = 126
            self.match(DuanLangParser.COLON)
            self.state = 127
            self.block()
            self.state = 128
            self.match(DuanLangParser.K_END)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==82:
                self.state = 129
                self.match(DuanLangParser.DOT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DuanLangParser.ParamContext)
            else:
                return self.getTypedRuleContext(DuanLangParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DuanLangParser.COMMA)
            else:
                return self.getToken(DuanLangParser.COMMA, i)

        def getRuleIndex(self):
            return DuanLangParser.RULE_paramList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = DuanLangParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.param()
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==83:
                self.state = 133
                self.match(DuanLangParser.COMMA)
                self.state = 134
                self.param()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DuanLangParser.ID, 0)

        def COLON(self):
            return self.getToken(DuanLangParser.COLON, 0)

        def typeAnnotation(self):
            return self.getTypedRuleContext(DuanLangParser.TypeAnnotationContext,0)


        def K_EQUAL(self):
            return self.getToken(DuanLangParser.K_EQUAL, 0)

        def expr(self):
            return self.getTypedRuleContext(DuanLangParser.ExprContext,0)


        def getRuleIndex(self):
            return DuanLangParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = DuanLangParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(DuanLangParser.ID)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==84:
                self.state = 141
                self.match(DuanLangParser.COLON)
                self.state = 142
                self.typeAnnotation()


            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 145
                self.match(DuanLangParser.K_EQUAL)
                self.state = 146
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DuanLangParser.StmtContext)
            else:
                return self.getTypedRuleContext(DuanLangParser.StmtContext,i)


        def getRuleIndex(self):
            return DuanLangParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):
